# MIG-Bot

./: .gitignore  README.md
CPP/Platform/Workspace/HelloWorld/src/: EigenAdd  HelloWorld  HelloWorld.cpp
Rust/ros2_ws/: .gitignore
Rust/ros2_ws/mig_bot/: CMakeLists.txt  Cargo.toml  package.xml
Rust/ros2_ws/src/: main.rs
